Added jmx setup to example cassandra remote script.  Also fixed jna url in same script.